After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 770606 - AutoarExtractor: signal error on encrypted archives
AutoarExtractor: signal error on encrypted archives
Status: RESOLVED FIXED
Product: gnome-autoar
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Autoar maintainer(s)
GNOME Autoar maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-08-30 15:48 UTC by Razvan Chitu
Modified: 2016-09-01 14:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
configure: bump required libarchive version (863 bytes, patch)
2016-08-30 15:48 UTC, Razvan Chitu
none Details | Review
AutoarExtractor: signal error on encrypted archives (1.28 KB, patch)
2016-08-30 15:48 UTC, Razvan Chitu
none Details | Review
configure: bump required libarchive version (948 bytes, patch)
2016-08-30 18:23 UTC, Razvan Chitu
committed Details | Review
AutoarExtractor: signal error on encrypted archives (1.40 KB, patch)
2016-08-30 18:23 UTC, Razvan Chitu
committed Details | Review

Description Razvan Chitu 2016-08-30 15:48:15 UTC
See patches.
Comment 1 Razvan Chitu 2016-08-30 15:48:35 UTC
Created attachment 334455 [details] [review]
configure: bump required libarchive version

A newer version of libarchive is required for features like checking for
encrypted archives.
Comment 2 Razvan Chitu 2016-08-30 15:48:51 UTC
Created attachment 334456 [details] [review]
AutoarExtractor: signal error on encrypted archives

Libarchive does not yet support decryption for all archive formats, so for now
an error should be signalled when encrypted headers are encountered.
Comment 3 Carlos Soriano 2016-08-30 17:00:03 UTC
Review of attachment 334455 [details] [review]:

yeah. Add to the commit message that we checked with distros.
Comment 4 Carlos Soriano 2016-08-30 17:01:13 UTC
Review of attachment 334456 [details] [review]:

This looks good to me, let's wait for Ting to confirm.
Also add in the commit message what happens without this patch (the decompression of an empty file)
Comment 5 Razvan Chitu 2016-08-30 18:23:14 UTC
Created attachment 334463 [details] [review]
configure: bump required libarchive version

A newer version of libarchive is required for features like checking for
encrypted archives. The new version of libarchive is also available in the
distributions that use GNOME.
Comment 6 Razvan Chitu 2016-08-30 18:23:30 UTC
Created attachment 334464 [details] [review]
AutoarExtractor: signal error on encrypted archives

Libarchive does not yet support decryption for all archive formats, so for now
an error should be signalled when encrypted headers are encountered. Proceeding
to decompress an encrypted file would end up in either creating empty files or
getting an error from libarchive.
Comment 7 Carlos Soriano 2016-09-01 14:40:05 UTC
Attachment 334463 [details] pushed as 11d061f - configure: bump required libarchive version
Attachment 334464 [details] pushed as 2ea62d2 - AutoarExtractor: signal error on encrypted archives