AutoarExtractor: signal error on encrypted archives

Libarchive does not yet support decryption for all archive formats, so for now
an error should be signalled when encrypted headers are encountered. Proceeding
to decompress an encrypted file would end up in either creating empty files or
getting an error from libarchive.

https://bugzilla.gnome.org/show_bug.cgi?id=770606